--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 <body>
 
 <main class="main">
-  <div class="clock-face">
+  
+    <div class="">
+        <a href="#forward" class="green button">Forwards!</a>
+    </div>
+    
+    <div class="">
+        <a href="#backward" class="red button">Backwards!</a>
+    </div>
+    
+    <div class="clock-face">
     <img class="hand hand-hour" src="images/hour-hand.svg" alt="">
     <img class="hand hand-minute" src="images/minute-hand.svg" alt="">
     <img class="center" src="images/center.svg" alt="">
