adjusted speed and made spelling corrections

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <main class="main">
     <div class="">
-        <a href="#forward" class="green button">Forwards!</a>
+        <a href="#start" class="green button">Forwards!</a>
     </div>
     
     <div class="">
-        <a href="#backward" class="red button">Backwards!</a>
+        <a href="#" class="red button">Backwards!</a>
     </div>
     
     <div class="clock-face">
