css clean up; added an id to div

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#" class="red button">Backwards!</a>
     </div>
     
-    <div class="clock-face">
+    <div id="start" class="clock-face">
     <img class="hand hand-hour" src="images/hour-hand.svg" alt="">
     <img class="hand hand-minute" src="images/minute-hand.svg" alt="">
     <img class="center" src="images/center.svg" alt="">
