--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <main class="main">
     <div class="">
-        <a href="#start" class="green button">Forwards!</a>
+        <a href="#go" class="green button">Forwards!</a>
     </div>
     
     <div class="">
         <a href="#" class="red button">Backwards!</a>
     </div>
     
-    <div id="start" class="clock-face">
+    <div id="go" class="clock-face">
     <img class="hand hand-hour" src="images/hour-hand.svg" alt="">
     <img class="hand hand-minute" src="images/minute-hand.svg" alt="">
     <img class="center" src="images/center.svg" alt="">
