added display none

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-<h1>Just Like Clockwork</h1>
+<h1 class="h1">Just Like Clockwork</h1>
 
 <main class="main">
     <div class="">
